JG-2004-02-04-0: Enhancem.: Added a utility to dump the list of objects in the
                            Berkeley DB database, dump objects and delete 
                            objects.
                 Review:    pending

SG-2004-02-03-1: Bugfix:    qacct only worked on queues and queue instances,
                            which are currently in the system. Removed ones
                            were not accessable. This is changed.
                 Changed:   qacct
                 Review:    EB

EB-2004-02-03-0: Bugfix:    - It was possible to delete host groups which were
                              referenced in cluster queue objects.
                            - Due to fix AD-2004-02-03-0 tight integration for
                              parallel jobs works correcly now.
                 Changed:   qmaster
                 Review:    SG

JG-2004-02-03-0: Testsuite: Fixed test functional/access_lists.
                            Enhancements and bugfixes in the handling of cluster
                            queues.

AD-2004-02-03-0: Bugfix:    Did add event handler for 'TYPE_JOB_RESEND_EVENT'
                 Changed:   qmaster
                 Review:    EB

MD-2004-02-03-0: Bugfix:    - Text
                            - fixed install_qmaster, install_execd
                 Changed:   - inst_sgeee

SG-2004-02-03-0: Bugfix:    - added the user id to the qdel error messages.
                            - some code cleanup
                 Changed:   qmaster
                 Review:    JG

CR-2004-02-03-1: Bugfix:    Fixed build for tru64 
                            (no prototype for "sge_get_execd_port()")

CR-2004-02-03-0: Testsuite: HTML compile output links of compile output HTML file
                            are now relative to HTML-directory.

MD-2004-02-02-2: Bugfix:    - Text 
                 Changed:   - inst_sgeee 

MD-2004-02-02-1: Bugfix:    - renamed sge_config to inst_sgeee